--- a/galeria.html
+++ b/galeria.html
@@ -52,6 +52,76 @@
       </div>
     </nav>
   </header>
+  <footer class="bg-dark text-center text-lg-start text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!--Grid row-->
+      <div class="row my-4">
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+
+          <div
+            class="rounded-circle bg-black shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
+            style="width: 150px; height: 150px;">
+            <img src="images/icon_nice.jpg" height="70" alt="" loading="lazy" />
+          </div>
+
+          <p class="text-center">Barbearia que tem talento!
+          </p>
+
+          <ul class="list-unstyled d-flex flex-row justify-content-center">
+            <li>
+              <a class="text-white px-2" href="#!">
+                <i class="fab fa-whatsapp"></i>
+              </a>
+            </li>
+            <li>
+              <a class="text-white px-2" href="#!">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a class="text-white ps-2" href="#!">
+                <i class="fa-solid fa-location-dot"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase mb-4">Contato</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <p><i class="fas fa-map-marker-alt pe-2"></i>R. Abelardo Fonseca, 40 - Campo Limpo - Americana - SP</p>
+            </li>
+            <li>
+              <p><i class="fas fa-phone pe-2"></i>+55 19 3478 - 0964</p>
+            </li>
+            <li>
+              <p><i class="fas fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+            </li>
+          </ul>
+        </div>
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-md-6 mb-4 mb-md-0 d-flex">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.881078111073!2d-47.309857089252816!3d-22.73266113527367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c89b52c124569d%3A0x983b683eb9379e02!2sNice%20Barber!5e0!3m2!1spt-BR!2sbr!4v1693362211749!5m2!1spt-BR!2sbr"
+            width="600" height="240" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </div>
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2023 Copyright:
+      <a class="text-white" href="index.html">NiceBarber.com</a>
+    </div>
+  </footer>
 </body>
 </script>
 
