--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="equipe.html">teste</a>
+              <a class="nav-link" href="equipe.html">Equipe</a>
             </li>
           </ul>
           <div class="d-flex">
