--- a/galeria.html
+++ b/galeria.html
@@ -52,6 +52,54 @@
       </div>
     </nav>
   </header>
+  <main>
+    <div class="container text-center">
+      <div class="row m-3">
+        <div class="col">
+          <img class="img-fluid" src="images/Mateus/corte1.jpg">
+        </div>
+        <div class="col">
+          <img class="img-fluid" src="images/Mateus/corte2.jpg">
+        </div>
+        <div class="col">
+          <img class="img-fluid" src="images/Mateus/corte3.jpg">
+        </div>
+      </div>
+      <div class="row m-3">
+        <div class="col">
+          <video src="video/corteVideo1.mp4" class="object-fit-contain img-fluid" autoplay muted loop></video>
+        </div>
+        <div class="col">
+          <video src="video/corteVideo2.mp4" class="object-fit-contain img-fluid" autoplay muted loop></video>
+        </div>
+        <div class="col">
+          <video src="video/corteVideo3.mp4" class="object-fit-contain img-fluid" autoplay muted loop></video>
+        </div>
+      </div>
+      <div class="row m-3">
+        <div class="col">
+          <img class="img-fluid" src="images/Bruno/corte1.jpg">
+        </div>
+        <div class="col">
+          <img class="img-fluid" src="images/Bruno/corte2.jpg">
+        </div>
+        <div class="col">
+          <img class="img-fluid" src="images/Mateus/corte4.jpg">
+        </div>
+      </div>
+      <div class="row m-3">
+        <div class="col">
+          <img class="img-fluid" src="images/Allan/corte1.jpg">
+        </div>
+        <div class="col">
+          <img class="img-fluid" src="images/Allan/corte2.jpg">
+        </div>
+        <div class="col">
+          <img class="img-fluid" src="images/Allan/corte3.jpg">
+        </div>
+      </div>
+    </div>
+  </main>
   <footer class="bg-dark text-center text-lg-start text-white">
     <!-- Grid container -->
     <div class="container p-4">
