--- a/galeria.html
+++ b/galeria.html
@@ -102,11 +102,11 @@
   </main>
   <footer class="bg-dark text-center text-lg-start text-white">
     <!-- Grid container -->
-    <div class="container p-4">
+    <div class="container pt-1">
       <!--Grid row-->
-      <div class="row my-4">
+      <div class="row my-3">
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-3 col-md-4 mb-md-0">
 
           <div
             class="rounded-circle bg-black shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
@@ -119,17 +119,19 @@
 
           <ul class="list-unstyled d-flex flex-row justify-content-center">
             <li>
-              <a class="text-white px-2" href="#!">
+              <a class="text-white px-2"
+                href="https://api.whatsapp.com/send/?phone=551934780964&text&type=phone_number&app_absent=0">
                 <i class="fab fa-whatsapp"></i>
               </a>
             </li>
             <li>
-              <a class="text-white px-2" href="#!">
+              <a class="text-white px-2" href="https://instagram.com/nicebarber_nb?igshid=MWZjMTM2ODFkZg==">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
             <li>
-              <a class="text-white ps-2" href="#!">
+              <a class="text-white ps-2"
+                href="https://www.google.com/maps/place/Nice+Barber+-+R.+Abelardo+Fonseca,+40+-+Campo+Limpo,+Americana+-+SP,+13477-070/@-22.7325095,-47.3072005,15z/data=!4m6!3m5!1s0x94c89b52c124569d:0x983b683eb9379e02!8m2!3d-22.7325095!4d-47.3072005!16s%2Fg%2F11s1w8fnjl">
                 <i class="fa-solid fa-location-dot"></i>
               </a>
             </li>
@@ -137,7 +139,7 @@
         </div>
 
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-3 col-md-4 mb-md-0">
           <h5 class="text-uppercase mb-4">Contato</h5>
 
           <ul class="list-unstyled">
@@ -147,14 +149,11 @@
             <li>
               <p><i class="fas fa-phone pe-2"></i>+55 19 3478 - 0964</p>
             </li>
-            <li>
-              <p><i class="fas fa-envelope pe-2 mb-0"></i>contact@example.com</p>
-            </li>
           </ul>
         </div>
 
         <!--Grid column-->
-        <div class="col-lg-6 col-md-6 mb-4 mb-md-0 d-flex">
+        <div class="col-lg-6 col-md-4 mb-md-0 d-flex">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.881078111073!2d-47.309857089252816!3d-22.73266113527367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c89b52c124569d%3A0x983b683eb9379e02!2sNice%20Barber!5e0!3m2!1spt-BR!2sbr!4v1693362211749!5m2!1spt-BR!2sbr"
             width="600" height="240" style="border:0;" allowfullscreen="" loading="lazy"
@@ -165,7 +164,7 @@
     </div>
 
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
       © 2023 Copyright:
       <a class="text-white" href="index.html">NiceBarber.com</a>
     </div>
