Redimencionando imagens e videos

--- a/galeria.html
+++ b/galeria.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <!-- Navegação do Site -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
       <div class="container-fluid">
@@ -52,60 +53,63 @@
       </div>
     </nav>
   </header>
+
+  <!-- Galeria de Fotos -->
   <main>
-    <div class="container text-center">
-      <div class="row m-3">
-        <div class="col">
-          <img class="img-fluid" src="images/Mateus/corte1.jpg">
-        </div>
-        <div class="col">
-          <img class="img-fluid" src="images/Mateus/corte2.jpg">
-        </div>
-        <div class="col">
-          <img class="img-fluid" src="images/Mateus/corte3.jpg">
-        </div>
+    <div class="row m-2">
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid w-100 shadow-1-strong rounded" src="images/Mateus/corte1.jpg">
       </div>
-      <div class="row m-3">
-        <div class="col">
-          <video src="video/corteVideo1.mp4" class="object-fit-contain img-fluid" autoplay muted loop></video>
-        </div>
-        <div class="col">
-          <video src="video/corteVideo2.mp4" class="object-fit-contain img-fluid" autoplay muted loop></video>
-        </div>
-        <div class="col">
-          <video src="video/corteVideo3.mp4" class="object-fit-contain img-fluid" autoplay muted loop></video>
-        </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid w-100 shadow-1-strong rounded" src="images/Mateus/corte2.jpg">
       </div>
-      <div class="row m-3">
-        <div class="col">
-          <img class="img-fluid" src="images/Bruno/corte1.jpg">
-        </div>
-        <div class="col">
-          <img class="img-fluid" src="images/Bruno/corte2.jpg">
-        </div>
-        <div class="col">
-          <img class="img-fluid" src="images/Mateus/corte4.jpg">
-        </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid w-100 shadow-1-strong rounded" src="images/Mateus/corte3.jpg">
       </div>
-      <div class="row m-3">
-        <div class="col">
-          <img class="img-fluid" src="images/Allan/corte1.jpg">
-        </div>
-        <div class="col">
-          <img class="img-fluid" src="images/Allan/corte2.jpg">
-        </div>
-        <div class="col">
-          <img class="img-fluid" src="images/Allan/corte3.jpg">
-        </div>
+    </div>
+    <div class="row m-2 justify-content-center">
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <video src="video/corteVideo1.mp4" class="img-fluid object-fit-contain shadow-1-strong rounded" autoplay muted
+          loop></video>
+      </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <video src="video/corteVideo2.mp4" class="img-fluid object-fit-contain shadow-1-strong rounded" autoplay muted
+          loop></video>
+      </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <video src="video/corteVideo3.mp4" class="img-fluid object-fit-contain  shadow-1-strong rounded" autoplay muted
+          loop></video>
+      </div>
+    </div>
+    <div class="row m-3">
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded" src="images/Bruno/corte1.jpg">
+      </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded" src="images/Bruno/corte2.jpg">
+      </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded" src="images/Mateus/corte4.jpg">
+      </div>
+    </div>
+    <div class="row m-3">
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded" src="images/Allan/corte1.jpg">
+      </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded" src="images/Allan/corte2.jpg">
+      </div>
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded" src="images/Allan/corte3.jpg">
       </div>
     </div>
   </main>
+
+  <!-- Rodape -->
+
   <footer class="bg-dark text-center text-lg-start text-white">
-    <!-- Grid container -->
     <div class="container pt-1">
-      <!--Grid row-->
       <div class="row my-3">
-        <!--Grid column-->
         <div class="col-lg-3 col-md-4 mb-md-0">
 
           <div
@@ -138,7 +142,6 @@
           </ul>
         </div>
 
-        <!--Grid column-->
         <div class="col-lg-3 col-md-4 mb-md-0">
           <h5 class="text-uppercase mb-4">Contato</h5>
 
@@ -152,7 +155,6 @@
           </ul>
         </div>
 
-        <!--Grid column-->
         <div class="col-lg-6 col-md-4 mb-md-0 d-flex">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.881078111073!2d-47.309857089252816!3d-22.73266113527367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c89b52c124569d%3A0x983b683eb9379e02!2sNice%20Barber!5e0!3m2!1spt-BR!2sbr!4v1693362211749!5m2!1spt-BR!2sbr"
@@ -163,7 +165,6 @@
       </div>
     </div>
 
-    <!-- Copyright -->
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
       © 2023 Copyright:
       <a class="text-white" href="index.html">NiceBarber.com</a>
