--- a/galeria.html
+++ b/galeria.html
@@ -56,51 +56,51 @@
 
   <!-- Galeria de Fotos -->
   <main>
-    <div class="row m-2">
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid w-100 shadow-1-strong rounded" src="images/Mateus/corte1.jpg">
+    <div class="row mx-3 mt-3">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Mateus/corte1.jpg">
       </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid w-100 shadow-1-strong rounded" src="images/Mateus/corte2.jpg">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Mateus/corte2.jpg">
       </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid w-100 shadow-1-strong rounded" src="images/Mateus/corte3.jpg">
-      </div>
-    </div>
-    <div class="row m-2 justify-content-center">
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <video src="video/corteVideo1.mp4" class="img-fluid object-fit-contain shadow-1-strong rounded" autoplay muted
-          loop></video>
-      </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <video src="video/corteVideo2.mp4" class="img-fluid object-fit-contain shadow-1-strong rounded" autoplay muted
-          loop></video>
-      </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <video src="video/corteVideo3.mp4" class="img-fluid object-fit-contain  shadow-1-strong rounded" autoplay muted
-          loop></video>
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Mateus/corte3.jpg">
       </div>
     </div>
-    <div class="row m-3">
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid shadow-1-strong rounded" src="images/Bruno/corte1.jpg">
+    <div class="row mx-3 justify-content-center">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <video src="video/corteVideo1.mp4" class="img-fluid object-fit-contain shadow-1-strong rounded mb-2" autoplay muted
+          loop></video>
       </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid shadow-1-strong rounded" src="images/Bruno/corte2.jpg">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <video src="video/corteVideo2.mp4" class="img-fluid object-fit-contain shadow-1-strong rounded mb-2" autoplay muted
+          loop></video>
       </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid shadow-1-strong rounded" src="images/Mateus/corte4.jpg">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <video src="video/corteVideo3.mp4" class="img-fluid object-fit-contain  shadow-1-strong rounded mb-2" autoplay muted
+          loop></video>
       </div>
     </div>
-    <div class="row m-3">
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid shadow-1-strong rounded" src="images/Allan/corte1.jpg">
+    <div class="row mx-3">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Bruno/corte1.jpg">
       </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid shadow-1-strong rounded" src="images/Allan/corte2.jpg">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Bruno/corte2.jpg">
       </div>
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img class="img-fluid shadow-1-strong rounded" src="images/Allan/corte3.jpg">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Mateus/corte4.jpg">
+      </div>
+    </div>
+    <div class="row mx-3 mb-3">
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Allan/corte1.jpg">
+      </div>
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Allan/corte2.jpg">
+      </div>
+      <div class="col-lg-4 col-md-12 mb-lg-0">
+        <img class="img-fluid shadow-1-strong rounded mb-3" src="images/Allan/corte3.jpg">
       </div>
     </div>
   </main>
