--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
+  <!-- Navegação do Site -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand img-fluid" href="index.html"><img height="85px" width="120" src="images/nicebarber.jpg"
             alt="" width="100px"></a>
@@ -53,37 +54,90 @@
     </nav>
   </header>
 
-  <footer class="bg-dark text-center text-lg-start text-white">
-    <!-- Grid container -->
-    <div class="container pt-1">
-      <!--Grid row-->
-      <div class="row my-3">
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-4 mb-md-0">
+  <main>
+    <!-- IMAGEM DE FUNDO PRINCIPAL -->
+    <div class="img-corte"></div>
 
+    <!-- NOSSA MARCA SECTION -->
+    <section class="img-fundo">
+      <div class="card bg-dark text-white">
+        <div class="card-img-overlay m-3" style="width: 100%; max-width: 50vh;">
+          <h1 class="card-title text-white text-uppercase">NOSSA MARCA</h1>
+          <p class="card-text" style="text-align: justify; font-size: 17px;">Nice Barber, fundada em 2022, é uma
+            barbearia que combina o
+            charme das barbearias
+            clássicas com um toque moderno e sofisticado. Oferecemos serviços de corte de cabelo e barba impecáveis,
+            enquanto você desfruta de um ambiente relaxante, e conversas envolventes. Venha fazer parte da nossa
+            comunidade de homens que valorizam a tradição e o estilo, e experimente uma barbearia como nenhuma outra.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVIÇOS -->
+    <div class="album py-3 bg-black">
+      <div class="container">
+        <h1 class="text-uppercase text-white m-3">SERVIÇOS</h1>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm text-center" style="background-color: black;">
+              <img class="card-img-top" alt="" src="images/home/maquina.png"
+                style="height: 100%; width: 100%; display: block;">
+              <div class="card-body">
+                <h5 class="card-text text-uppercase text-white">CORTE $40</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm text-center" style="background-color: black;">
+              <img class="card-img-top" alt="" src="images/home/navalha.png"
+                style="height: 100%; width: 100%; display: block;">
+              <div class="card-body">
+                <h5 class="card-text text-uppercase text-white">BARBA $40</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm text-center" style="background-color: black;">
+              <img class="card-img-top" alt="" src="images/home/tesouraNavalha.png"
+                style="height: 100%; width: 100%; display: block;">
+              <div class="card-body">
+                <h5 class="card-text text-uppercase text-white">CORTE E BARBA $70</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="bg-dark text-center text-lg-start text-white">
+    <div class="container pt-1">
+      <div class="row my-3">
+        <div class="col-lg-3 col-md-4 mb-md-0">
           <div
             class="rounded-circle bg-black shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
             <img src="images/icon_nice.jpg" height="70" alt="" loading="lazy" />
           </div>
-
-          <p class="text-center">Barbearia que tem talento!
-          </p>
-
+          <h5 class="text-center text-uppercase">Nice Barber
+          </h5>
           <ul class="list-unstyled d-flex flex-row justify-content-center">
             <li>
               <a class="text-white px-2"
-                href="https://api.whatsapp.com/send/?phone=551934780964&text&type=phone_number&app_absent=0">
+                href="https://api.whatsapp.com/send/?phone=551934780964&text&type=phone_number&app_absent=0"
+                target="_blank">
                 <i class="fab fa-whatsapp"></i>
               </a>
             </li>
             <li>
-              <a class="text-white px-2" href="https://instagram.com/nicebarber_nb?igshid=MWZjMTM2ODFkZg==">
+              <a class="text-white px-2" href="https://instagram.com/nicebarber_nb?igshid=MWZjMTM2ODFkZg=="
+                target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
             <li>
-              <a class="text-white ps-2"
+              <a class="text-white ps-2" target="_blank"
                 href="https://www.google.com/maps/place/Nice+Barber+-+R.+Abelardo+Fonseca,+40+-+Campo+Limpo,+Americana+-+SP,+13477-070/@-22.7325095,-47.3072005,15z/data=!4m6!3m5!1s0x94c89b52c124569d:0x983b683eb9379e02!8m2!3d-22.7325095!4d-47.3072005!16s%2Fg%2F11s1w8fnjl">
                 <i class="fa-solid fa-location-dot"></i>
               </a>
@@ -91,7 +145,6 @@
           </ul>
         </div>
 
-        <!--Grid column-->
         <div class="col-lg-3 col-md-4 mb-md-0">
           <h5 class="text-uppercase mb-4">Contato</h5>
 
@@ -105,7 +158,6 @@
           </ul>
         </div>
 
-        <!--Grid column-->
         <div class="col-lg-6 col-md-4 mb-md-0 d-flex">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.881078111073!2d-47.309857089252816!3d-22.73266113527367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c89b52c124569d%3A0x983b683eb9379e02!2sNice%20Barber!5e0!3m2!1spt-BR!2sbr!4v1693362211749!5m2!1spt-BR!2sbr"
@@ -116,10 +168,12 @@
       </div>
     </div>
 
-    <!-- Copyright -->
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
       © 2023 Copyright:
       <a class="text-white" href="index.html">NiceBarber.com</a>
+      <br>
+      Criador:
+      <a class="text-white" href="" style="text-decoration: none;" target="_blank">Victor Hugo Gutierrez</a>
     </div>
   </footer>
 </body>
