--- a/index.html
+++ b/index.html
@@ -27,14 +27,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle" aria-current="page" href="index.html" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">Home</a>
-              <ul class="dropdown-menu dropdown-menu-dark bg-black">
-                <li><a class="dropdown-item text-white" href="#marca">Nossa Marca</a></li>
-                <li><a class="dropdown-item text-white" href="#equipe">Equipe</a></li>
-                <li><a class="dropdown-item text-white" href="#servicos">Serviços</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="galeria.html">Galeria</a>
@@ -57,7 +51,7 @@
     </nav>
   </header>
 
-  <main style="background-color: black;">
+  <main class="bg-black">
     <!-- IMAGEM DE FUNDO PRINCIPAL -->
     <div class="img-corte"></div>
 
@@ -78,6 +72,42 @@
         </div>
       </div>
     </section>
+
+    <!-- Equipe -->
+    <div class="album py-3 bg-black" id="servicos">
+      <div class="container">
+        <h1 class="text-uppercase text-white m-3">Equipe</h1>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm text-center" style="background-color: black;">
+              <img class="card-img-top" alt="" src="images/home/allan-img.jpeg"
+                style="height: 100%; width: 100%; display: block;">
+              <div class="card-body">
+                <h5 class="card-text text-uppercase text-white"><a href="https://instagram.com/allanalves_nb?igshid=NGVhN2U2NjQ0Yg==">Allan Alves</a></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm text-center" style="background-color: black;">
+              <img class="card-img-top" alt="" src="images/home/mateus-img.jpeg"
+                style="height: 100%; width: 100%; display: block;">
+              <div class="card-body">
+                <h5 class="card-text text-uppercase text-white"><a href="https://instagram.com/barbeiromateusdias?igshid=NGVhN2U2NjQ0Yg==">Mateus Dias</a></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm text-center" style="background-color: black;">
+              <img class="card-img-top" alt="" src="images/home/bruno-img.jpeg"
+                style="height: 100%; width: 100%; display: block;">
+              <div class="card-body">
+                <h5 class="card-text text-uppercase text-white"><a href="https://instagram.com/barbeirobrunoleite?igshid=NGVhN2U2NjQ0Yg==">Bruno Leite</a></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- SERVIÇOS -->
     <div class="album py-3 bg-black" id="servicos">
@@ -113,6 +143,7 @@
           </div>
         </div>
       </div>
+    </div>
   </main>
 
   <!-- RODAPÉ -->
