--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <img class="card-img-top" alt="" src="images/home/allan-img.jpeg"
                 style="height: 100%; width: 100%; display: block;">
               <div class="card-body">
-                <h5 class="card-text text-uppercase text-white"><a href="https://instagram.com/allanalves_nb?igshid=NGVhN2U2NjQ0Yg==">Allan Alves</a></h5>
+                <h5 class="card-text text-uppercase"><a class="text-white" style="text-decoration: none;" href="https://instagram.com/allanalves_nb?igshid=NGVhN2U2NjQ0Yg==">Allan Alves</a></h5>
               </div>
             </div>
           </div>
@@ -92,7 +92,7 @@
               <img class="card-img-top" alt="" src="images/home/mateus-img.jpeg"
                 style="height: 100%; width: 100%; display: block;">
               <div class="card-body">
-                <h5 class="card-text text-uppercase text-white"><a href="https://instagram.com/barbeiromateusdias?igshid=NGVhN2U2NjQ0Yg==">Mateus Dias</a></h5>
+                <h5 class="card-text text-uppercase"><a class="text-white" style="text-decoration: none;" href="https://instagram.com/barbeiromateusdias?igshid=NGVhN2U2NjQ0Yg==">Mateus Dias</a></h5>
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
               <img class="card-img-top" alt="" src="images/home/bruno-img.jpeg"
                 style="height: 100%; width: 100%; display: block;">
               <div class="card-body">
-                <h5 class="card-text text-uppercase text-white"><a href="https://instagram.com/barbeirobrunoleite?igshid=NGVhN2U2NjQ0Yg==">Bruno Leite</a></h5>
+                <h5 class="card-text text-uppercase"><a class="text-white" style="text-decoration: none;" href="https://instagram.com/barbeirobrunoleite?igshid=NGVhN2U2NjQ0Yg==">Bruno Leite</a></h5>
               </div>
             </div>
           </div>
